package ui;

import core.PacMan;
import java.io.IOException;
import javafx.application.Application;
import javafx.event.EventHandler;
import javafx.fxml.FXMLLoader;
import javafx.scene.Parent;
import javafx.scene.Scene;
import javafx.scene.input.KeyCode;
import javafx.scene.input.KeyEvent;
import javafx.stage.Stage;

/**
 * Launches the JavaFX application.
 * Registers user-input.
 */
public class PacManApp extends Application {

  @Override
  public void start(Stage stage) throws IOException {
    FXMLLoader fxmlLoader = new FXMLLoader(this.getClass().getResource("app/PacMan.fxml"));
    Parent parent = fxmlLoader.load();
    Scene scene = new Scene(parent);
    stage.setScene(scene);
    stage.setMaximized(false);
    stage.show();

    // Registers keyboard-input
    scene.setOnKeyPressed(new EventHandler<KeyEvent>() {
      @Override
      public void handle(KeyEvent event) {
        if (event.getCode() == KeyCode.RIGHT) {
          PacMan.changeDirection("RIGHT");
        } else if (event.getCode() == KeyCode.LEFT) {
          PacMan.changeDirection("LEFT");
        } else if (event.getCode() == KeyCode.DOWN) {
          PacMan.changeDirection("DOWN");
        } else if (event.getCode() == KeyCode.UP) {
          PacMan.changeDirection("UP");
        }
      }
    });
  }

  /**
   * Main start method for application.
   */
  public static void main(String[] args) {
    launch();
  }
}